--- a/preamble.tex
+++ b/preamble.tex
@@ -40,6 +40,7 @@
 \DeclareMathOperator{\Hom}{Hom}
 \DeclareMathOperator{\Emb}{Emb}
 \DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\sign}{sign}
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\interior}{int}
@@ -47,6 +48,7 @@
 \DeclareMathOperator{\Div}{Div}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\coker}{coker}
+\DeclareMathOperator{\Max}{Max}
 
 \DeclareMathOperator*{\colim}{colim}
 
@@ -58,6 +60,7 @@
 \newcommand{\fMod}[1]{\textbf{fMod}_{#1}}
 \newcommand{\QCoh}[1]{\textbf{QCoh}_{#1}}
 \newcommand{\Coh}[1]{\textbf{Coh}_{#1}}
+\newcommand{\set}[1]{\{#1\}}
 
 \renewcommand{\theenumi}{\arabic{enumi}}
 \renewcommand{\labelenumi}{(\theenumi)}
