--- a/preamble.tex
+++ b/preamble.tex
@@ -49,6 +49,8 @@
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\coker}{coker}
 \DeclareMathOperator{\Max}{Max}
+\DeclareMathOperator{\GL}{GL}
+\RedeclareMathOperator{\span}{span}
 
 \DeclareMathOperator*{\colim}{colim}
 
