--- a/H28/expert3.tex
+++ b/H28/expert3.tex
@@ -123,7 +123,8 @@
             \]
             の同伴行列となる.
             しかし, $m_{A|_{W_x}}(A) = 0$より, $m_{A|_{W_x}}$は$m_A$で割り切れることと,
-            (1) $\Rightarrow$ (2)で示したことから, $m_{A|_{W_x}}$が最小多項式なので特に既約であことから, $m_A = m_{A|_{W_x}}$が成り立つ.
+            (1) $\Rightarrow$ (2)で示したことから, $m_{A|_{W_x}}$が最小多項式なので特に既約である.
+            ゆえに, $m_A = m_{A|_{W_x}}$が成り立つ.
             したがって, $m = n$である.
             以上より, $W_x$は$K^n$の部分線形空間であって, $\dim{W_x} = n$なので, $W_x = K^n$が成り立つ.
             \item [(3) $\Rightarrow$ (1)]
